sfSandBoxCode/force-app/main/default/objects/Employee_Status__c/Employee_Status__c.object-meta.xml
<CustomObject>
    <description>Record Employment Status changes for the Employee</description>
    <label>Employee Status</label>
    <nameField>
        <displayFormat>ESN-{0000000}</displayFormat>
        <label>Employee Status Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Employee Statuses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>