sfSandBoxCode/force-app/main/default/objects/Employee_Status__c/fields/Acting_Role__c.field-meta.xml
<CustomField>
    <fullName>Acting_Role__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Acting Role?</label>
    <type>Checkbox</type>
</CustomField>