sfSandBoxCode/force-app/main/default/objects/Employee_Status__c/fields/Comments__c.field-meta.xml
<CustomField>
    <fullName>Comments__c</fullName>
    <description>Comments on current status</description>
    <inlineHelpText>Comments on current status</inlineHelpText>
    <label>Comments</label>
    <length>100</length>
    <type>Text</type>
</CustomField>