sfSandBoxCode/force-app/main/default/objects/Employee_Status__c/fields/Company__c.field-meta.xml
<CustomField>
    <fullName>Company__c</fullName>
    <formula>IF(ISPICKVAL(Employee_Role__r.Company_Division__c, &#39;Sanergy&#39;),&#39;Sanergy&#39; , IF(ISPICKVAL(Employee_Role__r.Company_Division__c, &#39;Fresh Life&#39;),&#39;Fresh Life&#39; ,NULL ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Company</label>
    <type>Text</type>
</CustomField>