sfSandBoxCode/force-app/main/default/objects/Employee_Status__c/fields/Contract_Change_Renewal__c.field-meta.xml
<CustomField>
    <fullName>Contract_Change_Renewal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Contract Change / Renewal?</label>
    <type>Checkbox</type>
</CustomField>