sfSandBoxCode/force-app/main/default/objects/Employee_Status__c/fields/Current_Status__c.field-meta.xml
<CustomField>
    <fullName>Current_Status__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Current Status Flag</description>
    <inlineHelpText>Current Status Flag</inlineHelpText>
    <label>Current Status</label>
    <type>Checkbox</type>
</CustomField>