sfSandBoxCode/force-app/main/default/objects/Employee_Status__c/fields/Date_Till__c.field-meta.xml
<CustomField>
    <fullName>Date_Till__c</fullName>
    <formula>Previous_Employee_Status__r.Effective_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date Till</label>
    <type>Date</type>
</CustomField>