sfSandBoxCode/force-app/main/default/objects/Employee_Status__c/fields/Date_To__c.field-meta.xml
<CustomField>
    <fullName>Date_To__c</fullName>
    <description>Date Status to</description>
    <inlineHelpText>Date Status to</inlineHelpText>
    <label>Date To</label>
    <type>Date</type>
</CustomField>