sfSandBoxCode/force-app/main/default/objects/Employee_Status__c/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <formula>Employee_Role__r.Department__c</formula>
    <label>Department</label>
    <type>Text</type>
</CustomField>