sfSandBoxCode/force-app/main/default/objects/Employee_Status__c/fields/Department_Unit__c.field-meta.xml
<CustomField>
    <fullName>Department_Unit__c</fullName>
    <formula>Employee_Role__r.Sanergy_Department_Unit__c</formula>
    <label>Department Unit</label>
    <type>Text</type>
</CustomField>