sfSandBoxCode/force-app/main/default/objects/Employee_Status__c/fields/Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Effective_Date__c</fullName>
    <defaultValue>today()</defaultValue>
    <description>Date Status From</description>
    <inlineHelpText>Date Status From</inlineHelpText>
    <label>Effective Date</label>
    <type>Date</type>
</CustomField>