sfSandBoxCode/force-app/main/default/objects/Employee_Status__c/fields/Eligible_for_Rehire__c.field-meta.xml
<CustomField>
    <fullName>Eligible_for_Rehire__c</fullName>
    <description>Eligible for Rehire</description>
    <inlineHelpText>Eligible for Rehire</inlineHelpText>
    <label>Eligible for Rehire</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Upon Review</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>