sfSandBoxCode/force-app/main/default/objects/Employee_Status__c/fields/Employee__c.field-meta.xml
<CustomField>
    <fullName>Employee__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Employee Lookup</description>
    <inlineHelpText>Employee Lookup</inlineHelpText>
    <label>Employee</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>Employee Statuses</relationshipLabel>
    <relationshipName>Employee_Statuses</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>