sfSandBoxCode/force-app/main/default/objects/Employee_Status__c/fields/Employee_Role__c.field-meta.xml
<CustomField>
    <fullName>Employee_Role__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Employee Role</label>
    <referenceTo>Employee_Role__c</referenceTo>
    <relationshipLabel>Employee Statuses</relationshipLabel>
    <relationshipName>Employee_Statuses</relationshipName>
    <type>Lookup</type>
</CustomField>