sfSandBoxCode/force-app/main/default/objects/Employee_Status__c/fields/Employment_Status__c.field-meta.xml
<CustomField>
    <fullName>Employment_Status__c</fullName>
    <label>Employment Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Casual</fullName>
            </value>
            <value>
                <fullName>Consultant</fullName>
            </value>
            <value>
                <fullName>Fellow</fullName>
            </value>
            <value>
                <fullName>Fixed Term Contract</fullName>
            </value>
            <value>
                <fullName>Part-Time</fullName>
            </value>
            <value>
                <fullName>Permanent</fullName>
            </value>
            <value>
                <fullName>Probationary Contract</fullName>
            </value>
            <value>
                <fullName>Terminated</fullName>
            </value>
            <value>
                <fullName>Pending Onboarding</fullName>
            </value>
            <value>
                <fullName>Pending Activation</fullName>
            </value>
            <value>
                <fullName>Fixed Contract</fullName>
                <isActive>false</isActive>
                <label>Fixed Contract</label>
            </value>
            <value>
                <fullName>Full-Time</fullName>
                <isActive>false</isActive>
                <label>Full-Time</label>
            </value>
            <value>
                <fullName>Temporary</fullName>
                <isActive>false</isActive>
                <label>Temporary</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>