sfSandBoxCode/force-app/main/default/objects/Employee_Status__c/fields/Expected_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Expected_End_Date__c</fullName>
    <description>It Updates the End Date on the Employee</description>
    <inlineHelpText>It Updates the End Date on the Employee</inlineHelpText>
    <label>Expected End Date</label>
    <type>Date</type>
</CustomField>