sfSandBoxCode/force-app/main/default/objects/Employee_Status__c/fields/Line_Manager__c.field-meta.xml
<CustomField>
    <fullName>Line_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Line Manager</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>Employee Statuses (Line Manager)</relationshipLabel>
    <relationshipName>Employee_Statuses2</relationshipName>
    <type>Lookup</type>
</CustomField>