sfSandBoxCode/force-app/main/default/objects/Employee_Status__c/fields/Previous_Employee_Status__c.field-meta.xml
<CustomField>
    <fullName>Previous_Employee_Status__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Next Employee Status</label>
    <referenceTo>Employee_Status__c</referenceTo>
    <relationshipLabel>Employee Statuses</relationshipLabel>
    <relationshipName>Employee_Statuses</relationshipName>
    <type>Lookup</type>
</CustomField>