sfSandBoxCode/force-app/main/default/objects/Employee_Status__c/fields/Team_Lead_SF_Account__c.field-meta.xml
<CustomField>
    <fullName>Team_Lead_SF_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Team Lead SF Account</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Employee_Statuses</relationshipName>
    <type>Lookup</type>
</CustomField>