sfSandBoxCode/force-app/main/default/objects/Employee_Status__c/fields/Termination_Reason__c.field-meta.xml
<CustomField>
    <fullName>Termination_Reason__c</fullName>
    <description>Reason for Termination</description>
    <inlineHelpText>Reason for Termination</inlineHelpText>
    <label>Termination Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Absconded duty</fullName>
            </value>
            <value>
                <fullName>Consultant</fullName>
            </value>
            <value>
                <fullName>Disciplinary issues - Termination</fullName>
            </value>
            <value>
                <fullName>End of contract</fullName>
            </value>
            <value>
                <fullName>End of Fellowship</fullName>
            </value>
            <value>
                <fullName>End of Research</fullName>
            </value>
            <value>
                <fullName>Further studies</fullName>
            </value>
            <value>
                <fullName>Gross misconduct - Summary Dismissal</fullName>
            </value>
            <value>
                <fullName>Medical reasons</fullName>
            </value>
            <value>
                <fullName>Not disclosed</fullName>
            </value>
            <value>
                <fullName>Other employment</fullName>
            </value>
            <value>
                <fullName>Performance</fullName>
            </value>
            <value>
                <fullName>Redundancy</fullName>
            </value>
            <value>
                <fullName>Relocation</fullName>
            </value>
            <value>
                <fullName>Resignation</fullName>
            </value>
            <value>
                <fullName>Attendance</fullName>
            </value>
            <value>
                <fullName>Disciplinary issues</fullName>
            </value>
            <value>
                <fullName>Gross misconduct</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Resuming studies</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>