sfSandBoxCode/force-app/main/default/objects/Employee_Status__c/fields/Termination_Type__c.field-meta.xml
<CustomField>
    <fullName>Termination_Type__c</fullName>
    <description>Termination Type</description>
    <inlineHelpText>Termination Type</inlineHelpText>
    <label>Termination Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Voluntary</fullName>
            </value>
            <value>
                <fullName>Involuntary</fullName>
            </value>
            <value>
                <fullName>Death</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>