sfSandBoxCode/force-app/main/default/objects/Employee_Status__c/validationRules/Expected_End_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Expected_End_Date</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISBLANK( Expected_End_Date__c ),AND( NOT(ISPICKVAL(Employment_Status__c, &#39;Permanent&#39;))  , NOT(ISPICKVAL(Employment_Status__c, &#39;Terminated&#39;)),  NOT(ISPICKVAL(Employment_Status__c, &#39;Pending Activation&#39;)) ))</errorConditionFormula>
    <errorDisplayField>Expected_End_Date__c</errorDisplayField>
    <errorMessage>Expected End Date Cannot be empty</errorMessage>
</ValidationRule>