sfSandBoxCode/force-app/main/default/objects/Employee_Status__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Employee__c</columns>
    <columns>Employee_Role__c</columns>
    <columns>Effective_Date__c</columns>
    <columns>Sanergy_Department__c</columns>
    <columns>Sanergy_Department_Unit__c</columns>
    <columns>Previous_Employee_Status__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>